--- a/README
+++ b/README
@@ -1,1 +1,2 @@
-This is all for a FiveAM tutorial. You can find it [here](http://turtleware.eu/posts/Tutorial-Working-with-FiveAM.html).
+This is all for a FiveAM tutorial. You can find it here:
+http://turtleware.eu/posts/Tutorial-Working-with-FiveAM.html
