--- a/README
+++ b/README
@@ -1,1 +1,2 @@
-This is a part of a FiveAM tutorial. You can find it here:
+This is all an exercise for a FiveAM tutorial. You can find it here:
+http://turtleware.eu/posts/Tutorial-Working-with-FiveAM.html
